# APSC-143-Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  dynamic_array.c  dynamic_array.h  engine.c  engine.h  main.c  moves.c  moves.h  panic.c  parser.c  parser.h  parser_helpers.c  parser_helpers.h  tests.c  tools.c  tools.h  useful_inputs.txt
